--- a/Day-2/paragraph.html
+++ b/Day-2/paragraph.html
@@ -27,7 +27,7 @@
 
     </pre>
     <p>
-        Whose woods these are I think I know.   
+        Whose <big>woods</big> these are I think I know.   
         His house is in the village though;   
         He will not see me stopping here   
         To watch his woods fill up with snow.   
@@ -40,7 +40,7 @@
         He gives his harness bells a shake   
         To ask if there is some mistake.   
         The only other sound’s the sweep   
-        Of easy wind and downy flake.   
+        Of easy wind and <abbr title="World Health Org">WHO</abbr> flake.   
 
         The woods are lovely, dark and deep,   
         But I have promises to keep,   
@@ -56,5 +56,20 @@
 <font size="+2" color="#009966" face="Times New Roman, Times, serif">She is the founder of <font color="#000000" size="+3" face="Permanent Marker Regular">Descore - Designing & Decorating Lifestyles </font>which was founded in 2013. By taking up small projects to big, this company has now established its name slowly but profoundly. She is a <strong>certified Interior Designer</strong> with a degree <b>B.Sc.</b> in <i>Interior Design</i> and MBA design from <u>INIFD</u> Indore with an experience over <em>6</em> years. She is also a PD & English Trainer in Indore. </font>
 
 <p><s>Rs500</s> Rs 250</p>
+
+
+<hr><hr>
+
+<big> big tag </big>
+<tt> monotype font</tt>
+<p>to save a file you need to press <kbd> ctrl+s</kbd></p>
+
+<p>It is<sup>SuperScript</sup></p>
+<p>It is<sub>Subscript</sub></p>
+<center>Center</center>
+<small>Small tag</small>
+<br>
+
+<bdo dir="rtl">Bi-directional override</bdo>
 </body>
 </html>
